--- a/style_smp.css
+++ b/style_smp.css
@@ -8,16 +8,12 @@
 @media screen and (max-width:600px){
 
 h1{
-    margin:0;
-    padding:0;
     text-align: center;
 }
-/*ハンバーガーメニュー*/
 .hamburger{
     width:42px;
     height:42px;
     border: 2px solid #bbb;
-    cursor: pointer;
     position:fixed;
     top:20px;
     right:20px;
@@ -49,7 +45,6 @@ h1{
     background-color: #000;
     transform: rotate(-45deg);
     top:20px;
-    left:6px;
 }
 
 .hamburger.active span:nth-child(2),
@@ -59,26 +54,22 @@ h1{
     top:20px;
 }
 
-/*グローバルナビ*/
-
 nav.globalMenuSp{
     background-color: #d4cfd4;
     color:#fff;
     width:100%;
     text-align: center;
-    position:fixed;
-    top:0;
-    left:0;
-    z-index:2;
     transform: translateX(100%);
+    position:fixed;
+    z-index:2;
     transition:1s;
 }
 
 nav.globalMenuSp ul{
-    width:100%;
-    margin:0 auto;
-    padding:0;
     list-style: none;
+    width:100%;
+    margin:0;
+    padding:0;
 }
 
 nav.globalMenuSp ul li{
@@ -87,10 +78,10 @@ nav.globalMenuSp ul li{
 }
 
 nav.globalMenuSp ul li a{
-    padding:1em 0;
-    color:#fff;
-    display:block;
     text-decoration: none;
+    color:#fff;
+    padding:1em 0;
+    display:block;
 }
 
 nav.globalMenuSp ul li a:hover{
@@ -98,10 +89,8 @@ nav.globalMenuSp ul li a:hover{
 }
 
 nav.globalMenuSp.active{
-    display: block;
     transform:translateX(0%);
 }
-
 /*スマホ用スクリーンおわり*/
 }
 
@@ -120,8 +109,7 @@ nav.globalMenuSp.active{
 
     h1{
         width:30%;
-        margin:0;
-        padding:0;
+        transition:1s all;
     }
 
     nav.globalMenuSp{
@@ -133,8 +121,6 @@ nav.globalMenuSp.active{
         justify-content: flex-end;
         list-style: none;
         font-size:1.2em;
-        margin:0;
-        padding:0;
     }
 
     nav.globalMenuSp ul li{
@@ -142,15 +128,16 @@ nav.globalMenuSp.active{
     }
 
     nav.globalMenuSp ul li a{
+        display: block;
         padding:10px;
         text-decoration: none;
-        display: block;
+        color:#808080;
     }
 
     nav.globalMenuSp ul li a:hover{
-        color:#000;
+        color:red;
         background-color: #d3d3d3;
-        border-bottom:3px solid #000 ;
+        border-bottom:3px solid red ;
     }
 
 /*PC用スクリーンおわり*/
