--- a/style_smp.css
+++ b/style_smp.css
@@ -61,6 +61,7 @@ nav.globalMenuSp{
     text-align: center;
     transform: translateX(100%);
     position:fixed;
+    top:0;
     z-index:2;
     transition:1s;
 }
